Bug 70338 - FILESAVE: LO exports a corrupted DOCX
Summary: FILESAVE: LO exports a corrupted DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Sushil Shinde
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-10 10:19 UTC by Adam CloudOn
Modified: 2013-12-16 06:36 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
original DOCX that LO has a problem to export (92.27 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-10-10 10:19 UTC, Adam CloudOn
Details
The corrupt DOCX exported by LO (9.10 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-10-10 10:19 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-10-10 10:19:30 UTC
Created attachment 87380 [details]
original DOCX that LO has a problem to export

Problem description:
When loading the attached DOCX into LO, and saving back to DOCX - the exported DOCX is corrupted and cannot be opened by MS Word.

Steps to reproduce:
1. Load the attached DOCX in LO.
2. Save as NEW.DOCX
3. Load the NEW.DOCX in Word
4. File is corrupt

Current behavior:
LO exports a corrupted DOCX

Expected behavior:
LO should not export a corrupted DOCX
              
Operating System: All
Version: 4.2.0.0.alpha0+ Master
Comment 1 Adam CloudOn 2013-10-10 10:19:53 UTC
Created attachment 87381 [details]
The corrupt DOCX exported by LO
Comment 2 Adam CloudOn 2013-10-10 10:20:29 UTC
Please Note!
This is not a duplicate of fdo#69607.
This issue is probably caused by a different bug in the code.
Comment 3 Sushil Shinde 2013-11-26 13:59:57 UTC
Pushed code for this issue.
https://gerrit.libreoffice.org/#/c/6818/1
Comment 4 Sushil Shinde 2013-12-02 06:10:40 UTC
https://gerrit.libreoffice.org/#/c/6818/1
Comment 5 Commit Notification 2013-12-13 10:00:45 UTC
Sushil Shinde committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c42c57e665ad65b3a270ae223f1012ac988acdd3

fdo#70338 : Fixed file corruption issue after save for docx.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 surbhi.tongia 2013-12-16 06:36:34 UTC
Verified on Build: libo-master@7E2013-12-15_08.41.01_LibreOfficeDev_4.3.0.0.alpha0_Win_x86.
Attached File exports properly in LO.