fdo#70338 : Fixed file corruption issue after save for docx.

- File was giving corruption message if saved in LO.
    - Issue due to video file.
    - Attached file contain .mov which was not handled properly.
    - Added mov extension support in graphic filter.

Reviewed on:
	https://gerrit.libreoffice.org/6818

Change-Id: Ia278127ddc4afcd2d5fe04e86ed6201fb28dc04f